minor edits to inv, added templates to titan page

--- a/Titan.html
+++ b/Titan.html
@@ -14,17 +14,102 @@
 </head>
 
 <body>
-    <h1>Titan</h1>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="class-selector" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Select Class
-        </button>
-        <a class="btn btn-secondary" role="button" href="Inventory.html">Inventory Manager</a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="Titan.html">Titan</a>
-            <a class="dropdown-item" href="Warlock.html">Warlock</a>
-            <a class="dropdown-item" href="Hunter.html">Hunter</a>
+    <div class="container">
+        <h1>Titan</h1>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="class-selector" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Select Class
+            </button>
+            <a class="btn btn-secondary" role="button" href="Inventory.html">Inventory Manager</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="Titan.html">Titan</a>
+                <a class="dropdown-item" href="Warlock.html">Warlock</a>
+                <a class="dropdown-item" href="Hunter.html">Hunter</a>
+            </div>
+        </div>
+        <div class="row pt-2">
+            <form method="post" onsubmit="return handleLoadout(this)">
+                <div class="col">
+                    <h2>Create Loadout</h2>
+                    <p>Helmet</p>
+                    <select class="form-control form-control-lg">
+                        <option>helmet1</option>
+                    </select>
+                    <p>Arms</p>
+                    <select class="form-control form-control-lg">
+                        <option>Arms 1</option>
+                    </select>
+                    <p>Chest</p>
+                    <select class="form-control form-control-lg">
+                        <option>Chest 1</option>
+                    </select>
+                    <p>Legs</p>
+                    <select class="form-control form-control-lg">
+                        <option>Legs 1</option>
+                    </select>
+                    <p>Mark</p>
+                    <select class="form-control form-control-lg">
+                        <option>Mark 1</option>
+                    </select>
+                    <p>Kinetic</p>
+                    <select class="form-control form-control-lg">
+                        <option>Kinetic 1</option>
+                    </select>
+                    <p>Energy</p>
+                    <select class="form-control form-control-lg">
+                        <option>Energy 1</option>
+                    </select>
+                    <p>Power</p>
+                    <select class="form-control form-control-lg">
+                        <option>Power 1</option>
+                    </select>
+                    <button type="submit" class="btn btn-outline-success col-12" id="submit">Submit</button>
+                </div>
+            </form>
+            <div class="col">
+            <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="loadout-selector" data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      Select Loadout
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="#">Loadout 1</a>
+                      <a class="dropdown-item" href="#">Loadout 2</a>
+                      <a class="dropdown-item" href="#">Loadout 3</a>
+                    </div>
+                  </div>
+            <table class="table table-dark" id="table">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Item Name</th>
+                        <th scope="col">Item Type</th>
+                        <th scope="col">Light Level</th>
+                    </tr>
+                </thead>
+                <tbody id="invTable">
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Reverie</td>
+                        <td>Helmet</td>
+                        <td>750</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Last word</td>
+                        <td>Kinetic</td>
+                        <td>700</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Hallowfire Heart</td>
+                        <td>Chest</td>
+                        <td>732</td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
         </div>
     </div>
 
