--- a/Inventory.html
+++ b/Inventory.html
@@ -15,10 +15,12 @@
 </head>
 
 <body>
-  <h1>Item Manager</h1>
-
+  
   <div class="container">
-    <div class="row ml-0 pd-3">
+    <div class="row ml-0">
+      <h1>Item Manager</h1>
+    </div>
+    <div class="row ml-0 pd-3 pt-2">
       <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="class-selector" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
@@ -32,39 +34,39 @@
       </div>
     </div>
     <div class="row pt-3">
-      <div class="col">
+      <div class="col-8">
         <table class="table table-dark" id="table">
           <thead>
             <tr>
               <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
+              <th scope="col">Item Name</th>
+              <th scope="col">Item Type</th>
+              <th scope="col">Light Level</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody id="invTable">
             <tr>
               <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
+              <td>Reverie</td>
+              <td>Helmet</td>
+              <td>750</td>
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
+              <td>Last word</td>
+              <td>Kinetic</td>
+              <td>700</td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
+              <td>Hallowfire Heart</td>
+              <td>Chest</td>
+              <td>732</td>
             </tr>
           </tbody>
         </table>
       </div>
-      <div class="col">
+      <div class="col-4">
         <form method="post" onsubmit="return handleFormSubmit(this)">
           <div class="col">
             <p>Item Type</p>
