--- a/Inventory.html
+++ b/Inventory.html
@@ -21,7 +21,7 @@
       <h1>Item Manager</h1>
     </div>
     <div class="row ml-0 pd-3 pt-2">
-      <div class="dropdown">
+      <div class="dropdown col-3">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="class-selector" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
           Select Class
@@ -32,38 +32,49 @@
           <a class="dropdown-item" href="Hunter.html">Hunter</a>
         </div>
       </div>
+      <div class="col-2">
+        <button type="button" form="checkboxes" class="btn btn-secondary">Edit</button>
+      </div>
+      <div class="col-2">
+        <button type="button" form="checkboxes" class="btn btn-secondary">Delete</button>
+      </div>
     </div>
     <div class="row pt-3">
-      <div class="col-8">
+      <div class="input-group col-8">
         <table class="table table-dark" id="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Item Name</th>
-              <th scope="col">Item Type</th>
-              <th scope="col">Light Level</th>
-            </tr>
-          </thead>
-          <tbody id="invTable">
-            <tr>
-              <th scope="row">1</th>
-              <td>Reverie</td>
-              <td>Helmet</td>
-              <td>750</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Last word</td>
-              <td>Kinetic</td>
-              <td>700</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Hallowfire Heart</td>
-              <td>Chest</td>
-              <td>732</td>
-            </tr>
-          </tbody>
+          <form id="checkboxes">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Item Name</th>
+                <th scope="col">Item Type</th>
+                <th scope="col">Light Level</th>
+              </tr>
+            </thead>
+            <tbody id="invTable">
+              <tr>
+                <th scope="row">1</th>
+                <td>Reverie</td>
+                <td>Helmet</td>
+                <td>750</td>
+                <td><input type="checkbox"></td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Last word</td>
+                <td>Kinetic</td>
+                <td>700</td>
+                <td><input type="checkbox"></td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Hallowfire Heart</td>
+                <td>Chest</td>
+                <td>732</td>
+                <td><input type="checkbox"></td>
+              </tr>
+            </tbody>
+          </form>
         </table>
       </div>
       <div class="col-4">
