--- a/Inventory.html
+++ b/Inventory.html
@@ -32,12 +32,6 @@
           <a class="dropdown-item" href="Hunter.html">Hunter</a>
         </div>
       </div>
-      <div class="col-2">
-        <button type="button" form="checkboxes" class="btn btn-secondary">Edit</button>
-      </div>
-      <div class="col-2">
-        <button type="button" form="checkboxes" class="btn btn-secondary">Delete</button>
-      </div>
     </div>
     <div class="row pt-3">
       <div class="input-group">
@@ -59,6 +53,11 @@
         </table>
       </div>
       <div class="row pt-4">
+        <select id="itemNumber" class="dropdown-toggle">
+            <option id="n">Create New Item</option>
+        </select>
+      </div>
+      <div class="row pt-5">
         <form method="post" onsubmit="return handleFormSubmit(this, 'http://localhost:9000/armour')">
           <div class="col">
             <p>Item Type</p>
