Fixed inconsistent naming scheme, added filters to loadout creating form

--- a/Inventory.html
+++ b/Inventory.html
@@ -75,9 +75,9 @@
           <p>Item Type</p>
           <select id="slot" class="form-control form-control-lg mb-1">
               <option>Helmet</option>
-              <option>Arms</option>
+              <option>Arm</option>
               <option>Chest</option>
-              <option>Legs</option>
+              <option>Leg</option>
               <option>Mark</option>
             </select>
           <p>Loadout Id</p>
