--- a/Titan.html
+++ b/Titan.html
@@ -13,7 +13,7 @@
     <title>Titan</title>
 </head>
 
-<body onload="return loadoutForm()">
+<body onload="return loadoutForm(), populateLoadout()">
     <div class="container">
         <h1>Titan</h1>
         <div class="dropdown">
@@ -35,10 +35,8 @@
                         aria-expanded="false">
                         Select Loadout
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" id="l1" onclick="selectLoadout(1)">Loadout 1</a>
-                        <a class="dropdown-item">Loadout 2</a>
-                        <a class="dropdown-item">Loadout 3</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="loadoutDropdown">
+                        <a class="dropdown-item" id="l1" onclick="">Loadout 1</a>
                     </div>
                 </div>
                 <table class="table table-dark pt-2" id="table">
