started function to populate loadout table

--- a/Titan.html
+++ b/Titan.html
@@ -48,25 +48,7 @@
                             <th scope="col">Light Level</th>
                         </tr>
                     </thead>
-                    <tbody id="invTable">
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Reverie</td>
-                            <td>Helmet</td>
-                            <td>750</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Last word</td>
-                            <td>Kinetic</td>
-                            <td>700</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Hallowfire Heart</td>
-                            <td>Chest</td>
-                            <td>732</td>
-                        </tr>
+                    <tbody id="loadoutTable">
                     </tbody>
                 </table>
             </div>
@@ -74,19 +56,19 @@
                 <div class="col">
                     <h2>Create Loadout</h2>
                     <p>Helmet</p>
-                    <select type="number" id="HelmetIdForm" class="form-control form-control-lg">
+                    <select type="number" id="helmetIdForm" class="form-control form-control-lg">
                     </select>
                     <p>Arms</p>
-                    <select type="number" id="ArmIdForm" class="form-control form-control-lg">
+                    <select type="number" id="armIdForm" class="form-control form-control-lg">
                     </select>
                     <p>Chest</p>
-                    <select type="number" id="ChestIdForm" class="form-control form-control-lg">
+                    <select type="number" id="chestIdForm" class="form-control form-control-lg">
                     </select>
                     <p>Legs</p>
-                    <select type="number" id="LegIdForm" class="form-control form-control-lg">
+                    <select type="number" id="legIdForm" class="form-control form-control-lg">
                     </select>
                     <p>Mark</p>
-                    <select type="number" id="MarkIdForm" class="form-control form-control-lg">
+                    <select type="number" id="markIdForm" class="form-control form-control-lg">
                     </select>
                     <button type="submit" class="btn btn-outline-success col-12" id="submit">Submit</button>
                 </div>
